fix: added minimum height to ensure design does not overflow

--- a/tutorindigo/templates/indigo/lms/static/sass/certificate.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/certificate.scss
@@ -208,6 +208,7 @@
 .main-content {
   flex: 0 0 66.7%;
   max-width: 66.7%;
+  min-height: 430px;
 }
 
 .side-area {
